--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,6 +1,21 @@
-appname = txtjWebInterface
-httpport = 8080
-runmode = dev
-autorender = false
-copyrequestbody = true
-EnableDocs = true
+#
+AppName = txtjServerFramework
+RunMode = dev
+RouterCaseSensitive = false
+ServerName = server01
+RecoverPanic = true
+MaxMemory = 1 << 26
+EnableErrorsShow = true
+
+ServerTimeOut = 0
+ListenTCP4 = false
+EnableHTTP = false
+HTTPAddr = 192.168.1.1
+HTTPPort = 8080
+EnableAdmin = true
+AdminAddr = 192.168.1.1
+AdminPort = 8088
+
+AccessLogs = false
+FileLineNum = true
+Outputs = console
