--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,12 +1,19 @@
-#
+# server basic conf
 AppName = txtjServerFramework
+
+# run mode dev|prod
 RunMode = dev
+
 RouterCaseSensitive = false
 ServerName = server01
 RecoverPanic = true
 MaxMemory = 1 << 26
 EnableErrorsShow = true
 
+# server listen ip:port
+TCPAddr = 127.0.0.1:60060
+
+# server monitor conf
 ServerTimeOut = 0
 ListenTCP4 = false
 EnableHTTP = false
@@ -16,6 +23,7 @@ EnableAdmin = true
 AdminAddr = 192.168.1.1
 AdminPort = 8088
 
-AccessLogs = false
-FileLineNum = true
-Outputs = console
+# server log conf
+LogAccessLogs = false
+LogFileLineNum = true
+LogOutputs = file, {"filename":"log.log","level":7,"maxlines":0,"maxsize":0,"daily":true,"maxdays":1}
